*Empty MediaWiki Message*

--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -1,5 +1,7 @@
 '''Stadsplat''' of '''stadplat''' is een versammeling [[dialekt]]en wat wördt spröäken in de gröttere steyden in et [[Nedersaksisch|Neadersassiske]] gebeed. Et is een vörm van et [[Neerlaands|neaderlandsk]], med neadersassiske kenmarken, zo as uutspråke en een paar dialektwöörde en [[Tweantse zegswiezen|segswysen]] der döär. Vöäral in de gröttere [[Tweante|twentske]] steyden [[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske|Enskede]] wördt dit dialekt spröäken. Echt neadersassisk spreaket of begrypet sprekkers van et stadplat nich meyr.
 
+Vermodelik is den oorsprung van et dialekt tweyleydig. Döär de industriele revoluty groiden de van oldsher neadersassisk-talige steyden flink en tröäken der vöärt-an meyr lüde van nit-neadersassiske streaken up an. Dårnöäst wör et gebruuk van et neadersassisk langen tyd untmodigd en as minderwaerdig seen. Et resultåt is ne ård mengspråke, wårby de starkde van et aksent afhangt van de sociale ümstandigheid.
+
 Et verskynsel is te vergelyken med et [[leeuwardersk]] stads[[freesk]], wat eygenlik hollandsk is med starke freeske kenmarken, en et [[Missingsch]] in Noord-Düütskland.
 
 ==Kenmarken==
