*Empty MediaWiki Message*

--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -2,7 +2,7 @@
 
 Vermodelik is den oorsprung van et dialekt tweyleydig. Döär de industriele revoluty groiden de van oldsher neadersassisk-talige steyden flink en tröäken der vöärt-an meyr lüde van nit-neadersassiske streaken up an. Dårnöäst wör et gebruuk van et neadersassisk langen tyd untmodigd en as minderwaerdig seen. Et resultåt is ne ård mengspråke, wårby de starkde van et aksent afhangt van de sociale ümstandigheid.
 
-Et verskynsel is te vergelyken med et [[leeuwardersk]] stads[[freesk]], wat eygenlik hollandsk is med starke freeske kenmarken, en et [[Missingsch]] in Noord-Düütskland.
+Et verskynsel is te vergelyken med et [[leeuwardersk]] [[stadsfries|stadsfreesk]], wat eygenlik hollandsk is med starke freeske kenmarken, en et [[Missingsch]] in Noord-Düütskland.
 
 ==Kenmarken==
 ===Uutsproake===
