--- a/Bertha_Benz.mw
+++ b/Bertha_Benz.mw
@@ -10,6 +10,6 @@ Tiedens de raaize mos verschaaiden moalen stopt worden om reperoatsies te doun. 
 In herinnern aan de pioniersrit het de dailstoat [[Baden-Württemberg]] in 2008 de toeristische [[Bertha Benz Memorial Route]] in t leven roupen.
 
 [[Kategorie:Auto]]
-[[Kategorie:Duutse persoon]]
+[[Kategorie:Duutslaand]]
 [[Kategorie:Geschiedenis]]
 [[Kategorie:Grunnegs artikel]]
