--- a/Pizza.mw
+++ b/Pizza.mw
@@ -10,7 +10,7 @@ Oet opgreawingen blik at de [[Vikingen]] al in et [[9e eeuw|9de joarhoonderd]] p
 Eerst in et [[17e eeuw|17de joarhoonderd]] wörd der in [[Napels]] eskrewen oawer de pizza, woer as de leu noar de öarmere delen van de stad treuken um disse 'boerenemoaltied' te etten. De pizzamakers neumden ze pizzaioli.
 
 In [[1889]] wör den bekeandsten pizzaiolo (pizzamaker) van Napels, [[Raffaele Esposito]], oet eneudigd um vuur keunink [[Umberto I]] van Italië en zinne vrouwe [[Margaretha van Savoye]] ne pizza vuur öar te bakken. Hee bedachten vuur disse geleagenhead ne pizza met tomatensaus, [[mozzarella]] en [[basilikum]]; de kluren van de vlagge van et in [[1861]] op erichte [[Keuninkriek Italië]]. De keuniginne veund et vuural biezeunder lekker, woerduur as de ''pizza margherita'' geboren was. Disse pizza was et begin vuur alle pizza's zo as vie dee non nog keant.
- 
+
 Noa as völle Italianen vort treuken noar de [[Verenigde Stoaten]], ontsteund doar ne egene vörm van pizza's, met vake nen dikkeren boadem en meardere bestaanddelen. Duurdet de Amerikaanse Italianen de baanden vake nog anheulden met de Europese Italianen, wörden de Italiaanse pizza's ook verdan oetbeundiger, mer nooit zo oetvoerig as de Amerikaanse pizza's.
 
 Töt in de zestiger joaren van et [[20e eeuw|20ste joarhoonderd]] was de Italjaanse pizza vake een groot rechtheukig stukke deeg met bloots een betken tomatensaus en wat keze of [[ansjovis]]. Dit wör ik kleane stroatteantjes versk ebakken op grote platen. Der wör dan ook een rechtheukig stukke of esnedene bie et verkopen.
@@ -22,6 +22,6 @@ In völle restaurants in nen hoop leande wörd pizza an peunten esnedene verkoch
 *De Italianen zeent zo good in de VS op enömmen, det de meeste Amerikanen rechtevoort meant at de pizza ne Amerikaanse oetveending is. 
 * De Pizza Hawaii wörd vake as Amerikaanse pizza neumd, mer dissen is in [[Nederlaand]] oet edacht en later noar Amerika met enömmen.
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Eten]]
-[[Kategorie: Italië]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Eten]]
+[[Kategorie:Italiën]]
