*Empty MediaWiki Message*

--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -1,22 +1,22 @@
-'''Stadsplat''' of '''stadplat''' is een versammeling [[dialekt]]en wat wördt spröäken in de gröttere steyden in et [[Nedersaksisch|Neadersassiske]] gebeed. Et is een vörm van et [[Neerlaands|neaderlandsk]], med neadersassiske kenmarken, zo as uutspråke en een paar dialektwöörde en [[Tweantse zegswiezen|segswysen]] der döär. Vöäral in de gröttere [[Tweante|twentske]] steyden [[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske|Enskede]] wördt dit dialekt spröäken. Echt neadersassisk spreaket of begrypet sprekkers van et stadplat nich meyr.
+'''Stadsplat''' of '''stadplat''' is een versammeling [[dialekt]]en wat wördt spröäken in de gröttere städen in et [[Nedersaksisch|neadersassiske]] gebeed. Et is een förm van et [[Neerlaands|neaderlandsk]], med neadersassiske kenmarken, so as uutspråke en een paar dialektwöörde en [[Tweantse zegswiezen|segswysen]] derdöär. Vöäral in de gröttere [[Tweante|twentske]] städen [[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske|Enske]] wördt dit dialekt spröäken. Echt neadersassisk spreaket of begrypet sprekkers van et stadplat nich meyr.
 
-Vermodelik is den oorsprung van et dialekt tweyleydig. Döär de industriele revoluty groiden de van oldsher neadersassisk-talige steyden flink en tröäken der vöärt-an meyr lüde van nit-neadersassiske streaken up an. Dårnöäst wör et gebruuk van et neadersassisk langen tyd untmodigd en as minderwaerdig seen. Et resultåt is ne ård mengspråke, wårby de starkde van et aksent afhangt van de sociale ümstandigheid.
+Vermodelik is den oorsprung van et dialekt tweyleadig. Döär de industriele revoluty groiden de van oldsher neadersassisktalige städen flink en tröäken der vöärdan meyr lüde van nit-neadersassiske streaken up an. Dårnöäst wör et gebruuk van et neadersassisk langen tyd untmodigd en as minderwaerdig seen. Et resultaat is ne ård mengspråke, wårby de starkde van et aksent afhangt van de sociale ümstandigheid.
 
-Et verskynsel is te vergelyken med et [[leeuwardersk]] [[stadsfries|stadsfreesk]], wat eygenlik hollandsk is med starke freeske kenmarken, en et [[Missingsch]] in Noord-Düütskland.
+Et verskynsel is te vergelyken med et [[liwwadders|leywardersk]] [[stadsfries|stadsfreesk]], wat eigenlik hollandsk is med starke freeske kenmarken, en et ''[[missingsch]]'' in Noorddüütskland.
 
 ==Kenmarken==
-===Uutsproake===
+===Uutspråke===
 Neadersassiske klinkers en medklinkers wordet topassed in et neaderlandsk. Et bekendst bint de vlakke ''ee'', ''oo'' en ''eu'', dee as nich verglydet (nen [[tweeklaank|tweyklank]] wordet). Ouk de ''ui'' en ''ei'' bint anders as in et Standaard Nederlands: se beginnet höyger en meyr vöärin den mund (''buiten'' wördt ''büj(t)-n'', ''weinig'' wördt ''weejnig''). De ''ou'' klinkt meyr as ne ''oo'' as as ne ''aau''.
 
 Elk woord wat in et hollandsk up -en endigt, krigt in et stadsplat ne [[lettergreapklinker]]: ''-m'', ''-n'' of ''-ng''. Den wördt köäsen up basis van de vöärgånde medklinker: de warkwöörde ''lopen'', ''eten'' en ''werken'' wordet uutspröäken as ''loo(p)-m'', ''ee(t)-n'' en ''wer(k)-ng''. Ümdat dit as sociaal unwünskelik seen wördt, proberet lüde dit in sociaal underskeidende ümstandigheden te underdrükken en de lätste lettergreap vulleydig uut te spreaken, wårdöär et jüüst tevöäle nådruk krigt: ''loopühn'', ''eetühn'' en ''werkühn''. Medklinkergrupen wordet terüggebracht (medklinkerredukty): ''borst'' wördt ''bos''.
 
 Stemhebbende wryv- en sis-klanken wordet untstemd: [z] wördt håste altyd [s], [v] wördt [f].
 
-Wydters is et stadsplat [[rhotisisme|nit-rhotisk]], wat wil seggen dat de -r an et ende van een woord of lettergreap of nå nen klinker nich uutsprökken wördt: ''Moeder'' wördt ''moede'', de jungensnaam ''Bart'' wördt ''Bat''.
+Wyders is et stadsplat [[rhotisisme|nit-rotisk]], wat wil seggen dat de -r an et ende van een woord of lettergreap of nå nen klinker nich uutsprökken wördt: ''Moeder'' wördt ''moede'', de jungensname ''Bart'' wördt ''Bat''.
 
-Ook wördt der völle [[ofzwakking (sproaklear)|afswakking]] (''lenity'') topassed. Hyrby wordet harte stemlouse plufklanken ''p'', ''t'' en ''k'' afwakked töt sachten ''b'', ''d'' en [[Duuts]]en ''g'' as se tüsken twey klinkers inståt. Et vöärbealdsinneke "Dat kun je maar beter niet opeten" wördt uutspröäken as "da kuj ma bede nie obeedn".
+Ouk wördt der völle [[ofzwakking (sproaklear)|afswakking]] (''lenity'') topasd. Hyrby wordet harde stemlouse plofklanken ''p'', ''t'' en ''k'' afwakked töt sachten ''b'', ''d'' en [[Duuts]]en ''g'' as se tüsken twey klinkers inståt. Et vöärbealdsinneke "Dat kun je maar beter niet opeten" wördt uutspröäken as "da kuj ma bede nie obeedn".
 
-Hyruut blikt ouk dat stadsplat de samentrekkingen uut et neadersassisk gebrukt:''wil ik'', ''kün y'', ''sölt wy'' , esw, wordet samentrökken as ''wi'k'', ''ku'j'' en ''zu'w''.
+Hyruut blikt ouk dat stadsplat de samentrekkingen uut et neadersassisk gebruukt:''wil ik'', ''kün y'', ''sült wy'', esw., wordet samentrökken as ''wi'k'', ''ku'j'' en ''zu'w''.
 
 ===Wöörde en segswysen===
 In de basis is de wöördeskat van et stadsplat hollandsk. Toch wordet hyr vöäle dialektwöörde döärhen bruked. De bekendste vöärbealde sint ''unmündig'' en ''kats''.
@@ -24,11 +24,11 @@ In de basis is de wöördeskat van et stadsplat hollandsk. Toch wordet hyr vöä
 *"Et ging omunnig hat" - "het ging ontzettend snel."
 *"Ik heb der kats nie meer aan (ge)dacht" - "ik ben het compleet vergeten".
 
-Andere segswysen hebbet ne typisk twentske undergrund: "ik heb de band lek"(i.s.v. ''Mijn band is lek'') en "De ruiten los" (i.p.v. ''de ramen open'').
+Andere segswysen hebbet ne typisk twentske undergrund: "ik heb de band lek" (i.s.v. ''Mijn band is lek'') en "De ruiten los" (i.p.v. ''de ramen open'').
 
 ==Bekende sprekkers==
-*[[Ilse DeLange]] - Sängeresse uut Almelo
-*[[Herman Finkers]] - Komyk en leedkesskryver uut Almelo
+*[[Ilse DeLange]] - sängeresse uut Almelo
+*[[Herman Finkers]] - komik en leedkesskryver uut Almelo
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Nederlaands]]
