--- a/Afghanistan.mw
+++ b/Afghanistan.mw
@@ -2,7 +2,7 @@
 | vlagge=Flag of Afghanistan.svg
 | woapn=Coat of arms of Afghanistan.svg
 | naam=Afghanistan
-| naaminlaandssproak=<span style="line-height:1.33em;">'''جمهوری اسلامی افغانستان'''<br />''Jomhūrī-ye Eslāmī-ye Afġānistān''<br /><small>([[Dari (Persiez)|Perzies]])</small><br />'''د افغانستان اسلامي جمهوریت'''<br />''Da Afġānistān Islāmī Jomhoriyat''<br /><small>([[Pashto]])</small></span>
+| naaminlaandssproak=<span style="line-height:1.33em;">جمهوری اسلامی افغانستان<br />''Jomhūrī-ye Eslāmī-ye Afġānistān''<br /><small>([[Dari (Persiez)|Perzies]])</small><br />د افغانستان اسلامي جمهوریت<br />''Da Afġānistān Islāmī Jomhoriyat''<br /><small>([[Pashto]])</small></span>
 | lokasie = Afghanistan_in_its_region.svg
 | breedtegroad = 34///N | lengtegroad = 66///E | region = AF
 }}
