--- a/Neolithicum.mw
+++ b/Neolithicum.mw
@@ -1,4 +1,4 @@
-Et '''neolithicum'''<ref>Ene van de eersten um dizze benaming te bruken was Sir [[John Lubbock]] (''Pre-historic Times'', Londen - Edinburgh, 1865, p. <span class=plainlinks>[http://books.google.com/books?id=xHo-AAAAIAAJ&printsec=frontcover&dq=editions:LCCN71457801&hl=nl#PPA60,M1 60] (= 1869<sup>2</sup>, p. 74.).), howal de benaming ''neolithic'' al eerder was ebruukt (A. O'Connor, ''Finding Time for the Old Stone Age. A History of Palaeolithic Archaeology and Quaternary Geology in Britain, 1860-1960'', Oxford, 2007, p. [http://books.google.com/books?id=Ed7Tv_ttrdQC&pg=PA102&dq=neolithic+Lubbock&ei=YvJxSLjHCaHQjgGJvPDbAQ&hl=nl&sig=ACfU3U13cD5wcBVqp-GVUp7iGWMbWjk4QQ 102].).</ref> of de '''junge [[steentied]]''' is ne [[prehistorie|prehistoriese tied]] dee wöd ekenmarkt deur techniese en sociale veranderingen. Dizze kwamen veurt uut de oavergäng van ne [[jager-verzamelaar]]-samenleaving (mit n rondtrekkend <ref> Dit was neet "zomoar" rondtrekken: zi-j gingen woar et eaten was: ofhänkelek van dierentochten, oogstriepe gewassen enz. (Dit zol et grote veurdeel ewest wean van Sapiens boaven Neanderthaler) </ref> bestoan) noar ne samenleaving egroand op [[laandbouw]] en [[veeteelt]], mit [[sedentarisme]] (et vörmen van [[neaderzetting]]en). Zie gingen veurröa anleggen veur slechte tieden.
+Et '''neolithicum'''<ref>Ene van de eersten um dizze benaming te bruken was Sir [[John Lubbock]] (''Pre-historic Times'', Londen - Edinburgh, 1865, p. <span class=plainlinks>[http://books.google.com/books?id=xHo-AAAAIAAJ&printsec=frontcover&dq=editions:LCCN71457801&hl=nl#PPA60,M1 60] (= 1869<sup>2</sup>, p. 74.).), howal de benaming ''neolithic'' al eerder was ebruukt (A. O'Connor, ''Finding Time for the Old Stone Age. A History of Palaeolithic Archaeology and Quaternary Geology in Britain, 1860-1960'', Oxford, 2007, p. [http://books.google.com/books?id=Ed7Tv_ttrdQC&pg=PA102&dq=neolithic+Lubbock&ei=YvJxSLjHCaHQjgGJvPDbAQ&hl=nl&sig=ACfU3U13cD5wcBVqp-GVUp7iGWMbWjk4QQ 102].).</span></ref> of de '''junge [[steentied]]''' is ne [[prehistorie|prehistoriese tied]] dee wöd ekenmarkt deur techniese en sociale veranderingen. Dizze kwamen veurt uut de oavergäng van ne [[jager-verzamelaar]]-samenleaving (mit n rondtrekkend <ref> Dit was neet "zomoar" rondtrekken: zi-j gingen woar et eaten was: ofhänkelek van dierentochten, oogstriepe gewassen enz. (Dit zol et grote veurdeel ewest wean van Sapiens boaven Neanderthaler) </ref> bestoan) noar ne samenleaving egroand op [[laandbouw]] en [[veeteelt]], mit [[sedentarisme]] (et vörmen van [[neaderzetting]]en). Zie gingen veurröa anleggen veur slechte tieden.
 
 Et neolithicum zol in meerdere plaetse op de weald unofhänkelek van mekare op rundumme dezelfde tied untstoan wean en zich van doaruut oaver de hele weald verspreid hebben. Den anvang van et neolithicum en de rapheid woarmet et zich untwekkelden, verskilt van regio tot regio.
 
