--- a/Zuud-Hollaans_volkslied.mw
+++ b/Zuud-Hollaans_volkslied.mw
@@ -1,6 +1,6 @@
 't '''[[Zuud-Hollaand|Zuud-Hollaans]] [[volkslaid|volkslied]]''' geet as volg:
 
-<cite>
+<div style="font-style: italic;">
 :Zuid-Holland met je weiden en 't grazende vee,
 :Je molens, je duinen, je strand en je zee,
 :Je plassen en meren, aan schoonheid zo rijk,
@@ -18,7 +18,7 @@
 :Daar zetelt Oranjes doorluchtig geslacht!
 :Aan jou, o Zuid-Holland, historisch land, historisch land
 :Aan jou, o Zuid-Holland, heb ik mijn hart verpand!
-</cite>
+</div>
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Nederlaands volkslaid]]
