*Empty MediaWiki Message*

--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -6,15 +6,15 @@ Et verskynsel is te vergelyken med et [[liwwadders|leywardersk]] [[stadsfries|st
 
 ==Kenmarken==
 ===Uutspråke===
-Neadersassiske klinkers en medklinkers wordet topassed in et neaderlandsk. Et bekendst bint de vlakke ''ee'', ''oo'' en ''eu'', dee as nich verglydet (nen [[tweeklaank|tweyklank]] wordet). Ouk de ''ui'' en ''ei'' bint anders as in et Standaard Nederlands: se beginnet höyger en meyr vöärin den mund (''buiten'' wördt ''büj(t)-n'', ''weinig'' wördt ''weejnig''). De ''ou'' klinkt meyr as ne ''oo'' as as ne ''aau''.
+Neadersassiske klinkers en medklinkers wordet topassed in et neaderlandsk. Et bekendst bint de vlakke {{IPA|/eː/}} (NL ''ee''), {{IPA|/oː/}} (NL ''oo'') en {{IPA|/øː/}} (NL ''eu''), dee as nich verglydet (nen [[tweeklaank|tweyklank]] wordet). Ouk de standaardneaderlandske ''ui'' en ''ei'' bint anders in et stadsplat: se beginnet höyger en meyr vöärin den mund (''buiten'' wördt {{IPA|/bʏjtŋ̩/}} (NL fonetisk: ''bujtn''), ''weinig'' wördt {{IPA|/ʋeːinəx/}} (NL fonetisk: ''weejnig''). De ''au/ou'' klinkt meyr as ne {{IPA|/oː/}} (NL ''oo'') as ne {{IPA|/ɑu/}} (''au'').
 
-Elk woord wat in et hollandsk up -en endigt, krigt in et stadsplat ne [[lettergreapklinker]]: ''-m'', ''-n'' of ''-ng''. Den wördt köäsen up basis van de vöärgånde medklinker: de warkwöörde ''lopen'', ''eten'' en ''werken'' wordet uutspröäken as ''loo(p)-m'', ''ee(t)-n'' en ''wer(k)-ng''. Ümdat dit as sociaal unwünskelik seen wördt, proberet lüde dit in sociaal underskeidende ümstandigheden te underdrükken en de lätste lettergreap vulleydig uut te spreaken, wårdöär et jüüst tevöäle nådruk krigt: ''loopühn'', ''eetühn'' en ''werkühn''. Medklinkergrupen wordet terüggebracht (medklinkerredukty): ''borst'' wördt ''bos''.
+Elk woord wat in et hollandsk up -en endigt, krigt in et stadsplat ne [[lettergreapklinker]]: ''-m'', ''-n'' of ''-ng''. Den wördt köäsen up basis van de vöärgånde medklinker: de neaderlandske warkwöörde ''lopen'', ''eten'' en ''werken'' wordet uutspröäken as {{IPA|/loːpm̩/}} (NL fonetisk: ''loo(p)-m''), {{IPA|/eːtn̩/}} (NL fonetisk: ''ee(t)-n'') en {{IPA|/ʋɛrkŋ̩/}} (NL fonetisk: ''wer(k)-ng''). Ümdat dit as sociaal unwünskelik seen wördt, proberet lüde dit in sociaal underskeidende ümstandigheden te underdrükken en de lätste lettergreap vulleydig uut te spreaken, wårdöär et jüüst tevöäle nådruk krigt: {{IPA|/loːpən/}} (NL fonetisk: ''loopun''), {{IPA|/eːtən/}} (NL fonetisk: ''eetun'') en {{IPA|/ʋɛrkən/}} (NL fonetisk: ''werkun''). Medklinkergrupen wordet terüggebracht (medklinkerredukty): ''borst'' wördt ''bos''.
 
 Stemhebbende wryv- en sis-klanken wordet untstemd: [z] wördt håste altyd [s], [v] wördt [f].
 
 Wyders is et stadsplat [[rhotisisme|nit-rotisk]], wat wil seggen dat de -r an et ende van een woord of lettergreap of nå nen klinker nich uutsprökken wördt: ''Moeder'' wördt ''moede'', de jungensname ''Bart'' wördt ''Bat''.
 
-Ouk wördt der völle [[ofzwakking (sproaklear)|afswakking]] (''lenity'') topasd. Hyrby wordet harde stemlouse plofklanken ''p'', ''t'' en ''k'' afwakked töt sachten ''b'', ''d'' en [[Duuts]]en ''g'' as se tüsken twey klinkers inståt. Et vöärbealdsinneke "Dat kun je maar beter niet opeten" wördt uutspröäken as "da kuj ma bede nie obeedn".
+Ouk wördt der völle [[ofzwakking (sproaklear)|afswakking]] (''lenity'') topasd. Hyrby wordet harde stemlouse plofklanken ''p'', ''t'' en ''k'' afwakked töt sachten ''b'', ''d'' en [[Duuts]]en ''g'' as se tüsken twey klinkers inståt. Et vöärbealdsinneke "Dat kun je maar beter niet opeten" wördt uutspröäken as "da kuj ma bede nie obeedn" (NL fonetisk).
 
 Hyruut blikt ouk dat stadsplat de samentrekkingen uut et neadersassisk gebruukt:''wil ik'', ''kün y'', ''sült wy'', esw., wordet samentrökken as ''wi'k'', ''ku'j'' en ''zu'w''.
 
@@ -29,6 +29,8 @@ Andere segswysen hebbet ne typisk twentske undergrund: "ik heb de band lek" (i.s
 ==Bekende sprekkers==
 *[[Ilse DeLange]] - sängeresse uut Almelo
 *[[Herman Finkers]] - komik en leedkesskryver uut Almelo
+
+{{Dialekt|twd||Nysassiske Skryvwyse}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Nederlaands]]
