--- a/Citroën_2CV.mw
+++ b/Citroën_2CV.mw
@@ -1,5 +1,5 @@
 [[Bestaand:2cv-club-red.jpg|thumb|300px|Rooie ent]]
-De '''Citroën 2CV''' of de '''ent''' ([[Nederlaands|Nederlans]]: ''eend'') is een [[auto]] van de [[Frankriek|Franse]] autofabrikant [[Citroën]]. De afkorting staot veur ''deux Chevaux Vapeur'', wat ''twee stoompeerden'' betekent. 'Chevaux Vapeur' is een Franse maot veur de berekening van de wegenbelasting. De 2CV worde ebouwd tussen [[1948]] en [[1990]]. In die periodes bin der zo'n 5 miljoen van gebouwd. 't Uterlijk van de 2CV is ontworpen door [[Flaminio Bertoni]], die ook verantwoordelijk was voor 't uterlijk van de [[Citroën ID/DS]] en de [[Traction Avant]].
+De '''Citroën 2CV''' of de '''ent''' ([[Nederlaands|Nederlans]]: ''eend'') is een [[auto]] van de [[Frankriek|Franse]] autofabrikant [[Citroën]]. De ofkorting staot veur ''deux Chevaux Vapeur'', wat ''twee stoompeerden'' betekent. 'Chevaux Vapeur' is een Franse maot veur de berekening van de wegenbelasting. De 2CV worde ebouwd tussen [[1948]] en [[1990]]. In die periodes bin der zo'n 5 miljoen van ebouwd. 't Uterlijk van de 2CV is ontwurpen deur [[Flaminio Bertoni]], die oek verantwoordelijk was veur 't uterlijk van de [[Citroën ID/DS]] en de [[Traction Avant]].
 
 == Bienamen ==
 In Frankriek had de 2CV de bienaam ''"La Deuche"'', in [[België]] was 't ''"de Geit"'', "''het wippertje''" of ''"strijkijzer"'', in Nederland ''"Eend"'' (ent) of ''"Lelijke Eend"'' (lillijke ent), in [[Duutslaand|Duutsland]] worde 't ''"Die häßliche Ente"'' en in [[Verienigd Keuninkriek|Engeland]] ''"Tin Snail"'' (blikken slek) eneumd.
