*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -279,6 +279,13 @@ Vöäle vrogere ståtsbedryve, so as de buten bedryv weasende Kenya Post and Tel
 
 In maert [[1996]] vörmden de presidenten van Kenia, Tanzania en Uganda med mekander de [[Oust-Afrikaanske Gemeynskap]] (OAG). De OAG wil tariven en douanehandelingen lyktrekken en samenwarken an vrye döärgang vöär inwoaners en beatere weagen. In maert 2004 teakenden de drey landen een handelsverdrag.
 
+===Tourisme===
+[[File:Elephants at Amboseli national park against Mount Kilimanjaro.jpg|thumb|[[Nationaal Park Amboseli]]]]
+[[File:Tsavo east panorama.jpg|thumb|[[Nationaal Park Oust-Tsavo]]]]
+
+Nå de landbow is tourisme de gröätste brunne van butenlandsk inkoamen.<ref>de Blij, Harm. The World Today: Concepts and Regions in Geography 4th edition. Wiley Publishing: Hoboken, NJ</ref> Verantwoordelik vöär de informatyvöärsening vöär et tourisme is et Kenya Tourism Board.<ref>[http://www.ktb.go.ke/ Kenya KTB.go.ke. Tourism Board. Bekeaken up 2 maert 2017.]</ref> De vöärnaamste touristentrekkers sint fotosafari's döär de 60 nationale parken en wildreservaten. Andere trekkers sint de Groute Trek van de gnus in de [[Masai Mara]], wat te book steyt as et söävende wearldwunder, historiske moskeen en forten uut de koloniale tyd so as by [[Mombasa]], [[Malindi]] en [[Lamu]]. Dårnöäst is Kenia geleevd üm de wydske landskappen so as de witte töppe van de [[Kenia (barg)|Barg Kenia]], et groute [[Riftdal]], teavelden van [[Kericho]], koffyplantages van [[thika]] en et uutsicht up de [[Kilimanjaro]] vanuut et süden.<ref>[http://www.nationsencyclopedia.com/Africa/Kenya-TOURISM-TRAVEL-AND-RECREATION.html NationsEncyclopedia.com. "Tourism, travel, and recreation - Kenya - area".] Bekeaken up 2 maert 2017.</ref> Wydters hevt Kenia uutstrekkede stranden an de [[Swahiliküste]] an den Stillen Oceaan. Et gröätste andeyl touristen kümt uut [[Düütskland]] en et [[Vereynigd Köäningryk]]. See trekket meyst up de stranden en wilparken.
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
