*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -285,6 +285,24 @@ In maert [[1996]] vörmden de presidenten van Kenia, Tanzania en Uganda med meka
 
 Nå de landbow is tourisme de gröätste brunne van butenlandsk inkoamen.<ref>de Blij, Harm. The World Today: Concepts and Regions in Geography 4th edition. Wiley Publishing: Hoboken, NJ</ref> Verantwoordelik vöär de informatyvöärsening vöär et tourisme is et Kenya Tourism Board.<ref>[http://www.ktb.go.ke/ Kenya KTB.go.ke. Tourism Board. Bekeaken up 2 maert 2017.]</ref> De vöärnaamste touristentrekkers sint fotosafari's döär de 60 nationale parken en wildreservaten. Andere trekkers sint de Groute Trek van de gnus in de [[Masai Mara]], wat te book steyt as et söävende wearldwunder, historiske moskeen en forten uut de koloniale tyd so as by [[Mombasa]], [[Malindi]] en [[Lamu]]. Dårnöäst is Kenia geleevd üm de wydske landskappen so as de witte töppe van de [[Kenia (barg)|Barg Kenia]], et groute [[Riftdal]], teavelden van [[Kericho]], koffyplantages van [[thika]] en et uutsicht up de [[Kilimanjaro]] vanuut et süden.<ref>[http://www.nationsencyclopedia.com/Africa/Kenya-TOURISM-TRAVEL-AND-RECREATION.html NationsEncyclopedia.com. "Tourism, travel, and recreation - Kenya - area".] Bekeaken up 2 maert 2017.</ref> Wydters hevt Kenia uutstrekkede stranden an de [[Swahiliküste]] an den Stillen Oceaan. Et gröätste andeyl touristen kümt uut [[Düütskland]] en et [[Vereynigd Köäningryk]]. See trekket meyst up de stranden en wilparken.
 
+===Landbouw===
+Lanbow is de eyn-nå-grötste bydraeger an et keniaanske Bruto binnenlandsk produkt (BBP), nå de deenstensektor. In 2005 was landbouw, med inbegrip van holtkap en viskerye, good vöär 24% van et BBP, vöär 18% van alle lounen en 50% van de uutvoorwinst. De belangrykste winstgewassen sint tea, blomen en planten en koffy. Tea en blomen en planten leyvert et meyste up van alle Kenia's uutvoor. Upbrengsten van belangryke voodselbrunnen as [[mais]] hangt stark af van et weader. As et mangs wat minder geyt, is et land deyls afhanglik van voodselhülpe. Byvöärbeeld in [[2004]] mislükkeden de ougst döär groute dröygte en satten 1,8 miljoon lüde sunder eaten.<ref>[http://wfp.org/news/news-release/drought-leaves-two-million-kenyans-need-food-aid wfp.org. "Drought leaves two million Kenyans in need of food aid". United Nations World Food Programme. Skreaven up 26 april 2005.] Bekeaken up 5 August 2016.</ref>
+
+Een internationaal samenwarkingsverband vöär undersöök når gewassen in halv-dröyge tropenlanden hevt med redelik sukses een paar buren hülpen üm [[oranje linsen]] te verbowen in steyde van mais, vöäral in de dröygere steydes. Oranje linsen köänet heyl good teagen dröygte en wilt best gröien in streaken wår jårliks minder as 650 mm reygen valt. Volgende projekten jaagden de handel in pöälenvrüchten an. Hyrby wör vöäral insat up et upbowen van handelsnetwarken en de afstand verkörten tüsken vrüchtenkweakers en tüskenhandelaars. Hyrmed steyg de lokale produktyprysen med 20 - 25% in Nairobi en Mombasi. Döär de vermarkting van de oranje linse köänet wat buren nu investeren in masjines as mobile telefoons en beatere grund en deers.
+
+In de vrüchtbåre houglanden verbowt se tea, koffy, sisal, chrysanten, mais en tarwe. Et is eyne van de meyst suksesvolle landbowstreaken van Afrika. In et halv-dröyge noordousten wördt der vöärnamelik med leavende deers ebuurd. In de laeger liggende deylen verbowt se [[kokosnoat|kokosnöäten]], [[ananas]] [[kasjewnöäten]], [[katoon]], [[sükerreed]], sisal en mais. Kenia hef noch gin sodöänige måte van efficienty en investeringen dat se voodselveiligheid köänet beden. In samengang med årmood (53% van de lüde leavet under de årmodegrense) sorget dit dat een flink deyl van de inwoaners regelmåtig hunger lidt en afhanglik is van voodselhülpe. Slechte weagen, een unbetrowbår spoarnetwark, verwårlousd waternetwark en vöäls te prysig luchtvervoor sorgt dervöär dat buren in dröyge en halv-dröyge deylen van et land öäre gewassen nit kwyt köänet. Dit was töt in 2011 noch so, wårup at et Roude Krüüs et hülpprogramma [[Kenyans for Kenya]] upsat.<ref>[http://conferences.ifpri.org/2020africaconference/program/day1summaries/kinyua.pdf Towards Achieving Food Security in Kenya]. Joseph Kinyua, Permanent Secretary, Ministry of Agriculture, Kenya; 1 April 2004, Kampala, Uganda.</ref>
+
+[[File:Kapsowar1.JPG|thumb|Burenland in Kenia]]
+Kenia's irrigatysektor is verdeyld in drey organisatystrukturen: pakketten vöär kleine afneamers, centraal-beheyrde publike pakketten en een private/kommerciele irrigatypakket. 
+
+De kleine afneamerpakketten wordet beheyrd en untwikkeld döär alleyne warkende of grupen buren dee selv ouk water gebruket. Irrigeerd wördt der up individuele of grupsvelden van 0,1 töt 0,4 hektare grout. Der sint ungeveyr 3000 kleine afneamerpakketten oaver ne totale uppervlakte van 47.000 ha.
+
+Dårnöäst hevt et land noch söäven groute, centraal beheyrde irrigatyprogramma's: Mwea, [[Bura]], [[Hola]], [[Perkerra]], Westkano, Bunyala en Ahero. By mekander is dat ne uppervlakte van 18.200 ha med in döärsneyde 2600 ha per pakket. Disse pakketten valt under de Nationale Råd vöär Irrigaty en sint good vöär 18% van alle irrigeerde land in Kenia.
+
+Groutskålige privaat beheyrde buurderyen beslåt 45.000 hectare, good vöär 40% van al et irrigeerde land. See gebruket hougwaerdigee technology en leyvert gewassen van houge kwaliteit vöär de uutvoormarkt, med name blomen en grööntes.<ref>Republic of Kenya, Ministry of Water and Irrigation (2009) ''National Irrigation and Drainage Policy'':3–4.</ref>
+
+Kenia is de up twey nå gröätste uutvoorder van [[snydblomen]].<ref>[http://edition.cnn.com/2015/03/16/africa/kenya-flower-industry/ Veselinovic, Milena. "Got roses this Valentine's Day? They probably came from Kenya". Edition.cnn.com. Skreaven up 16 maert 2015.] Bekeaken up 17 juli 2016.</ref> Ungeveyr de hälvte van Kenia's 127 blomenkweakers sittet rund et [[Naivashamear]], 90 kilometer noorwestelik van Nairobi. Üm den uutvoor te versnellen hevt de luchthaven van Nairobi ne aparte halle speciaal vöär den döärvoor van blomen en grööntes.
+
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
