--- a/Kenia.mw
+++ b/Kenia.mw
@@ -293,13 +293,13 @@ Een internationaal samenwarkingsverband vöär undersöök når gewassen in halv
 In de vrüchtbåre houglanden verbowt se tea, koffy, sisal, chrysanten, mais en tarwe. Et is eyne van de meyst suksesvolle landbowstreaken van Afrika. In et halv-dröyge noordousten wördt der vöärnamelik med leavende deers ebuurd. In de laeger liggende deylen verbowt se [[kokosnoat|kokosnöäten]], [[ananas]] [[kasjewnöäten]], [[katoon]], [[sükerreed]], sisal en mais. Kenia hef noch gin sodöänige måte van efficienty en investeringen dat se voodselveiligheid köänet beden. In samengang med årmood (53% van de lüde leavet under de årmodegrense) sorget dit dat een flink deyl van de inwoaners regelmåtig hunger lidt en afhanglik is van voodselhülpe. Slechte weagen, een unbetrowbår spoarnetwark, verwårlousd waternetwark en vöäls te prysig luchtvervoor sorgt dervöär dat buren in dröyge en halv-dröyge deylen van et land öäre gewassen nit kwyt köänet. Dit was töt in 2011 noch so, wårup at et Roude Krüüs et hülpprogramma [[Kenyans for Kenya]] upsat.<ref>[http://conferences.ifpri.org/2020africaconference/program/day1summaries/kinyua.pdf Towards Achieving Food Security in Kenya]. Joseph Kinyua, Permanent Secretary, Ministry of Agriculture, Kenya; 1 April 2004, Kampala, Uganda.</ref>
 
 [[File:Kapsowar1.JPG|thumb|Burenland in Kenia]]
-Kenia's irrigatysektor is verdeyld in drey organisatystrukturen: pakketten vöär kleine afneamers, centraal-beheyrde publike pakketten en een private/kommerciele irrigatypakket. 
+Kenia's irrigatysektor is up drey wysen verdeyld: vöär kleine afneamers, centraal beheyrd publike irrigaty en private/kommerciele irrigaty. 
 
-De kleine afneamerpakketten wordet beheyrd en untwikkeld döär alleyne warkende of grupen buren dee selv ouk water gebruket. Irrigeerd wördt der up individuele of grupsvelden van 0,1 töt 0,4 hektare grout. Der sint ungeveyr 3000 kleine afneamerpakketten oaver ne totale uppervlakte van 47.000 ha.
+De kleine afneamers behelst alleyne warkende of grupen buren dee selv ouk water gebruket. Irrigeerd wördt der up eygene velden of grupsvelden van 0,1 töt 0,4 hektare grout. Der sint ungeveyr 3000 kleine afneamers oaver ne totale uppervlakte van 47.000 ha.
 
-Dårnöäst hevt et land noch söäven groute, centraal beheyrde irrigatyprogramma's: Mwea, [[Bura]], [[Hola]], [[Perkerra]], Westkano, Bunyala en Ahero. By mekander is dat ne uppervlakte van 18.200 ha med in döärsneyde 2600 ha per pakket. Disse pakketten valt under de Nationale Råd vöär Irrigaty en sint good vöär 18% van alle irrigeerde land in Kenia.
+Dårnöäst hevt et land noch söäven groute, centraal beheyrde irrigatyprogramma's: in Mwea, [[Bura]], [[Hola]], [[Perkerra]], Westkano, Bunyala en Ahero. By mekander is dat ne uppervlakte van 18.200 ha med in döärsneyde 2600 ha per afneamer. Disse irrigatystreaken valt under de Nationale Råd vöär Irrigaty en sint good vöär 18% van alle irrigeerde land in Kenia.
 
-Groutskålige privaat beheyrde buurderyen beslåt 45.000 hectare, good vöär 40% van al et irrigeerde land. See gebruket hougwaerdigee technology en leyvert gewassen van houge kwaliteit vöär de uutvoormarkt, med name blomen en grööntes.<ref>Republic of Kenya, Ministry of Water and Irrigation (2009) ''National Irrigation and Drainage Policy'':3–4.</ref>
+Groutskålige privaat beheyrde buurderyen beslåt 45.000 hectare, good vöär 40% van al et irrigeerde land. See gebruket hougwaerdige technology en leyvert gewassen van houge kwaliteit vöär de uutvoormarkt, med name blomen en grööntes.<ref>Republic of Kenya, Ministry of Water and Irrigation (2009) ''National Irrigation and Drainage Policy'':3–4.</ref>
 
 Kenia is de up twey nå gröätste uutvoorder van [[snydblomen]].<ref>[http://edition.cnn.com/2015/03/16/africa/kenya-flower-industry/ Veselinovic, Milena. "Got roses this Valentine's Day? They probably came from Kenya". Edition.cnn.com. Skreaven up 16 maert 2015.] Bekeaken up 17 juli 2016.</ref> Ungeveyr de hälvte van Kenia's 127 blomenkweakers sittet rund et [[Naivashamear]], 90 kilometer noorwestelik van Nairobi. Üm den uutvoor te versnellen hevt de luchthaven van Nairobi ne aparte halle speciaal vöär den döärvoor van blomen en grööntes.
 
