/* Benamingen veur slappe koffie */

--- a/Koffie.mw
+++ b/Koffie.mw
@@ -18,7 +18,7 @@ Naost de gewone benaming 'slappe koffie' bestaon der ok aandere benamingen:
 * ''Slappe sjoekse''
 | valign="top" |
 * ''Broodkoffie''
-* ‘’Slabberdebabski’’
+* Slabberdebabski
 * ''Waoterkoffie''
 * ''Lujewievenkoffie''
 * ''Klotennat'' ([[Epe]])
