([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Staring.jpg]] → [[File:Anthony Christiaan Winand Staring geportretteerd door Johannes Immerzeel.jpg]] #2

--- a/Anthony_Christiaan_Winand_Staring.mw
+++ b/Anthony_Christiaan_Winand_Staring.mw
@@ -1,7 +1,7 @@
 {{wrapper}}
 |[[Ofbeelding:Anthony Christiaan Winand Staring.jpg|thumb|180px|Anthony Christiaan Winand Staring op 6-joaregen laeftied (in 1773) deur [[Pieter Frederik de la Croix]]]]
 |-
-|[[Ofbeelding:Staring.jpg|thumb|180px|Plaetjen van Staring]]
+|[[Ofbeelding:Anthony Christiaan Winand Staring geportretteerd door Johannes Immerzeel.jpg|thumb|180px|Plaetjen van Staring]]
 |-
 |[[Ofbeelding:Staring2.jpg|thumb|right|180px|Standbeeld van Anthony Christiaan Winand Staring in [[Vodden]]]]
 |}
