--- a/Jo_Daan.mw
+++ b/Jo_Daan.mw
@@ -23,6 +23,7 @@ Sund heur pensioen in 1975 woonde Daan in de [[Achterhook|Aachterhoeke]]. In de 
 
 ==Uutgaonde verwiezing==
 *[http://www.meertens.knaw.nl/jo_daan/ Meertens Instituut, mit onder meer een breedvoerige bibliografie en een verzaemeling artikels die in 2000 ter ere van Daan verschenen]
+* [https://www.dbnl.org/tekst/_jaa004200601_01/_jaa004200601_01_0005.php Jan Stroop: 'Levensbericht van Jo Daan'. In: ''Jaarboek van de Maatschappij der Nederlandse Letterkunde'', 2006, pag. 37-45]
 
 [[Kategorie:Stellingwarfs_artikel|Daan, Jo]]
 [[Kategorie:Taolkundige|Daan, Jo]]
