--- a/Kenia.mw
+++ b/Kenia.mw
@@ -305,12 +305,46 @@ Kenia is de up twey nå gröätste uutvoorder van [[snydblomen]].<ref>[http://ed
 
 ===Industry===
 [[File:Orrling of Nairobi.jpg|thumb|300px|Et höyvdkantoor van de [[Kenya Commercial Bank]] in [[KENCOM House]] (rechts) in Nairobi.]]
-Al is Kenia een middellaege inkoamensekonomy, toch is fabrikswark good vöär 14% van et BBP. De gröätste industriäle centra sint [[Nairobi]], [[Mombasa]] en [[Kisumu]]. de belangrykste industryen sint voderverwarkingsbedryve så as grånmålers, beerbroweryen, sükerreedbreakers en makers van bruuksgoderen so as auto's.
+Al is Kenia een middellaege inkoamensekonomy, toch is fabrikswark good vöär 14% van et BBP. De gröätste industriäle centra sint [[Nairobi]], [[Mombasa]] en [[Kisumu]]. De belangrykste industryen sint voderverwarkingsbedryve so as grånmålers, beerbroweryen, sükerreedbreakers en makers van bruuksgoderen so as auto's.
 
 Up industriäle skåle doot se in Kenia cement maken.<ref>[http://www.constructionkenya.com/2431/kenya-cement-industry-outlook/ constructionkenya.xom. "Cement production keeps pace with growing demand". Skreaven up 5 september 2015.] Bekeaken up 13 mei 2016.</ref> Dårnöäst hevt Kenia ne öälyverwarkingsindustry, wår ruwe petröäly töt gebruukspetröäly vöär de lokale markt verwarked wördt. Dårnöäst is der ne gröiende informele sektor under de name ''jua kali'', wår up kleine skåle huusholdgoderen maked wordt, so as auto-underdeylen en landbowwarktügen.<ref>http://www.ilo.org/global/about-the-ilo/newsroom/features/WCMS_075529/lang--en/index.htm ilo.org. "Kenya: Employers' organizations taking the lead on linking the informal sector to formal Kenyan enterprises". Skreaven up 2 augustus 2005.] Bekeaken up 13 mei 2016}}</ref><ref>[https://web.archive.org/web/20160610135631/http://www.mygov.go.ke/?p=5038|archive- mygov.go.ke (Archiveerd). "Jua Kali sector plays key role in economic development and job creation". Skreaven up 13 november 2015] Bekeaken up 13 mei 2016.</ref>
 
 Döärdat Kenia de lätste jåren anslöäten is by de African Growth and Opportunity Act (AGOA) van de amerikaanske regeyring, gröit de industry de lätste jåren rapper. Seyt at de AGOA in warking tröäd in 2000, steag de uutvoor van kleyder når de [[Vereynigde Ståten|VS]] van € 39 miljoon når € 242 miljoon in 2006. Andere wysen van stüt vöär de maakindustry sint under meyr de günstige belastingsmåtregels van de nye regeyring, wåründer et wegneamen van tariven up kapitaalbesit en andere ruwe materialen.<ref>[https://2009-2017.state.gov/e/eb/rls/othr/ics/2010/138092.htm?goMobile=0. state.gov. "Kenya."] Bekeaken up 10 juni 2016.</ref>
 
+===Vervoor===
+Et land hevt een uutgebreid netwark van hardte en unverhardte weagen. Kenia's spoarlyne verbindet de havens en gröätste städen en löpt når et nåberland Uganda. Der sint 15 luchthavens med hardte banen.
+
+De döär China betaalde spoarlyne van Mombasa når Uganda güng lös in [[2017]], wårmed in 2019 al meyr as 2,7 miljoon lüde reisd hebbet.<ref>[https://edition.cnn.com/2019/05/20/china/china-kenya-sgr-rail-africa-intl/index.html Cnn.com. "A legacy of lunacy haunts Kenya's old railway. Will China's $3.6B line be different?" Marsch, Jenni. 21 mei 2019.] Bekeaken up 15 augustus 2019.</ref>
+
+===Energy===
+Et grötste andeyl elektriciteit kümt van geothermiske energy.<ref>[https://web.archive.org/web/20180811133300/https://www.iea.org/statistics/statisticssearch/report/?country=Kenya&product=electricityandheat iea.org. (Archiveerd). "Electricity in Kenya".] 11 augustus 2018.</ref> As tweyde vöärnaamste energybrunne hebbet se hydroelektriske stations in dammen by de höygere [[Tanarivyr]] en de dam by de [[Turkwelkloov]] in et westen. De rest van de energy kümt van een petröälykrachtwark an de küste, geothermiske installatys by [[Olkaria]] en importeerd uut [[Uganda]]. Selv kun Kenia tüsken 2001 en 2003 1142 [[megawatt]] upwekken. Et ståtsbedryv [[Kenya Electricity Generating Company]] (KenGen), wat in 1997 uprichted wör under de name Kenya Power Company, geyt oaver et upwekken, terwyl as et bedryv Kenya Power oaver de verspreiding geyt. Et land hevt mangs te maken med uutval, vöäral as der döär dröygte te weinig water vöärby de dammen kümt.
+
+Üm de groiende vråge by te beynen, wil Kenya in 2024 anvangen med de bow van een kernenergycentrale. In 2019 sint dårvöär al verskeidene lokatys bekeaken, under meyr an den Indisken Oceaan, et Turkanamear en et Viktoriamear. Vöär den bow kryget se hülpe uut [[Rusland]], [[China]] en [[Süüd-Korea]].<re>[https://www.esi-africa.com/industry-sectors/generation/kenya-nuclear-electricity-board-evaluates-nuclear-sites/ Esi-africa.com. "Kenya Nuclear Electricity Board evaluates nuclear sites". Skreaven up 8 januåri 2019.] Bekeaken up 15 augustus 2019.</ref>
+
+[[File:Worker in Olkaria Kenya.jpg|thumb|upright|Warklüde by de [[Geothermiske energycentrale van Olkaria]]]]
+
+In de gråfskap Turkana sit öäly in de grund. Et yrske bedryv [[Tullow Oil]] skattet at der rund de 1 miljard vaten uut te halen sint.<ref>[https://www.bloomberg.com/news/2013-08-19/kenya-from-nowhere-plans-east-africa-s-first-oil-exports-energy.html Bloomberg.com. "Kenya From Nowhere Plans East Africa's First Oil Exports: Energy".] Bekeaken up 15 augustus 2019. </ref> Et land undersöcht noch of der anderswår noch öäly sit. Kenia importeert noch alle ruwe petröäly en is noch vulleydig afhanglik van de 21-daagse vöärråden dee as de öälymarkt vöärskrivt. Petröäly beslüt 20% töt 25% van de landelike uutgaven.<ref>[https://af.reuters.com/article/investingNews/idAFJOE74J0F220110520?pageNumber=1&virtualBrandChannel=0 Reuters.com. "Kenya plans strategic oil reserve"]. Reuters (10 November 2011).</ref>
+
+===Chineeske investeringen en handel===
+Up de websteyde van [[98.4 Capital FM]], een landelik radiostation, stünd te leasen dat [[China]]'s ambassadöör vöär Kenia, Liu Guangyuan by president Kenyatta's besöök an Peking seade: "China hevt inmiddels € 425 miljoon investeerd. Dårmed sint se Kenia's gröätste brunne van butenlandske investeringen. Weadersydsen handel was good vöär €2,6 miljard in 2012. Med Kenyatta reisden noch 60 sakenlüde med, dee as €2,2 miljoon understöäning van China wullen krygen vöär ne spoarlyne van van Mombasa når Uganda en €1,6 miljard vöär nen dam."
+
+In 2014 begün Kenia mineralen med China te verhandelen, so as [[ilmenyt]].<ref>[https://www.standardmedia.co.ke/business/article/2000104631/kenya-joins-mineral-exporters-as-first-titanium-cargo-leaves-port Standard Digital News. "Business – Kenya joins mineral exporters as first titanium cargo leaves port". Jackson Okoth, Philip Mwakio. Skreaven up 14 february 2014.] Bekeaken up 15 February 2015.</ref> 
+
+De nye Mombasa-Ugandalyne is döär China betaald. Volgens een artikel up CNN sint der wal sorgen oaver chineeske inmenging in keniaanske saken. In de belangrykste banen, so as stationsbehear en treinmachinisten, ståt noch altyd chineeske warkers an de top. Döärdat de chineesken sik oaver et algemeyn nit buten öäre kantoren låt seen, unståt de lätste tyd raciale spanningen.<ref>Cnn.com.</ref> Ouk is der angst dat Kenia de skulden nit kan aflossen en China dårup beslag geyt leggen up belangryke havens.
+
+===Vision 2030===
+[[File:Vision2030 logo.svg|thumb|Et officiäle logo vöär [[Kenya Vision 2030|Vision 2030]].]]
+
+In 2007 makeden de keniaanske regeyring et plan ''Vision 2030'' bekend, een ekonomisk untwikkelingsprogramma wårmed as Kenia in 2030 up denselvden voot hoapet te koamen as de Ekonomiske Tygers van Asie. In 2013 gavven et een Nationaal Klimaatveranderingsplan uut. In et warkplan van 200 bladsyden, untwikkeld med hülpe van de [[Clima & Development Knowledge Network]], beskrivt et land öäre visy vöär een 'klimaatvast untwikkelpad når laege koalstuvuutstoat'. By de uutgave in maert 2013 seade den sekretåris van et Ministery van Planning, Nationale Untwikkeling en Vision 2030 dat klimaat een middelpunt was in et vernyde Halverweags Termynplan wat in de månden dårup uut sul koamen. Dit sul een rechtstreyks en robüüst raamwark weasen vöär et warkplan en de seykerheid geaven dat klimaatverandering een ekonomybreyd punt wördt.<ref>[http://cdkn.org/2013/03/news-kenyas-national-climate-change-action-plan-is-officially-launched/ cdkn.org. Climate & Development Knowledge Network. "NEWS: Kenya's National Climate Change Action Plan is officially launched".] Skreaven up 28 March 2013.</ref>
+
+
+===Öäly-undersöök===
+
+[[File:Kenya Aerial 2009-08-27 14-26-44.JPG|thumb|upright=1.35|[[Lake Turkana]] borders Turkana County]]
+
+Et is bekend dat Kenia öälyvöärråden hevt in de [[Gråfskap Turkana]]. President Mwai Kibaki makeden up 26 maert 2012 bekend at Tullow Oil een britsk-yrsk öäly-undersööksbedryv öäly vünden had, mär dat et noch drey jår duren sul üm te kyken of et genog was üm an te verdenen.<ref>[https://www.bbc.co.uk/news/world-africa-17513488 BBC News – Kenya oil discovery after Tullow Oil drilling]. BBC. 26 March 2012.</ref>
+
+In 2006 teakenden den domåligen chineesken president [[Hu Jintao]] een öälykuntrakt med Kenia. Et was deyl van een ryge handelsoavereynkoamsten wårmed Afrika's natuurlike hülpstovven når China's rap groiende ekonomy musten blyven koamen. Med disse oavereynkoamst möäg China's nationale öäly- en gasbedryv vry når öäly boaren in Kenia. Inmiddels wördt der eboard by de grense med Süüd-Sudan, et betwiste land van de Noord-Oustelike Provincy up de grense med [[Somalie]] en in küstwateren.<ref>[http://www.ft.com/cms/s/0/a51a39d2-280c-11db-b25c-0000779e2340.html Financial Times. fy.com. Barber, Lionel, England, Andrew. "China's scramble for Africa finds a welcome in Kenya". Skreaven up 10 augustus 2006.] Bekeaken up 27 juni 2008.</ref>
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
